--- a/Simulating Data.ipynb
+++ b/Simulating Data.ipynb
@@ -974,6 +974,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uni_name = ['UL', 'TCD', 'DCU', 'UCD', 'NUIG']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_name = ['Vet', 'Agric', 'Lab', 'Library', 'Specific']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ee_name = ['Ann', 'Mary', 'Tom', 'John', 'Mark']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = {'University': np.random.choice(uni_name, 50), \n",
+    "        'Category': np.random.choice(cat_name, 50), \n",
+    "        'Spend': np.random.randint(25000, 100000, 50),\n",
+    "        'Month': np.random.randint(1, 13, 50),\n",
+    "        'Specialist': np.random.choice(ee_name, 50)}\n",
+    "df = pd.DataFrame(raw_data, columns = ['University', 'Category', 'Spend', 'Month', 'Specialist'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('trial.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
